connect fieldLabel prop

--- a/styles/components/form/_fields.scss
+++ b/styles/components/form/_fields.scss
@@ -16,8 +16,8 @@
   background: var(--input-background);
   color: var(--input-text);
   border-radius: 15px 15px 0 0;
-  margin-bottom: .5em;
-  padding: 1em;
+  margin-bottom: 2em;
+  padding: 1rem 1.5rem;
   width: 100%;
   min-height: 4em;
   display: flex;
