add error messages for other fields

--- a/styles/components/form/fields/_toggle.scss
+++ b/styles/components/form/fields/_toggle.scss
@@ -55,4 +55,20 @@ $border-space: 3px;
     vertical-align: top;
     line-height: $size;
   }
+
+  &__error {
+    opacity: 0;
+    max-height: 0;
+    color: var(--error);
+    margin: unit(.5) 0 unit(.5) 0;
+    transition: opacity var(--animation-easing) var(--animation-duration-standard),
+    max-height var(--animation-easing) var(--animation-duration-standard);
+  }
+
+  &--has-error {
+    .form-field-toggle__error {
+      opacity: 1;
+      max-height: 50px;
+    }
+  }
 }
