--- a/styles/components/form/fields/_checkbox-group.scss
+++ b/styles/components/form/fields/_checkbox-group.scss
@@ -7,4 +7,20 @@ $component-name: form-field-checkbox-group;
   &__option:last-child {
     margin: 0;
   }
+
+  &__error {
+    opacity: 0;
+    max-height: 0;
+    color: var(--error);
+    margin: unit(.5) 0 unit(.5) 0;
+    transition: opacity var(--animation-easing) var(--animation-duration-standard),
+    max-height var(--animation-easing) var(--animation-duration-standard);
+  }
+
+  &--has-error {
+    .#{$component-name}__error {
+      opacity: 1;
+      max-height: 50px;
+    }
+  }
 }
