--- a/styles/components/form/fields/_textarea.scss
+++ b/styles/components/form/fields/_textarea.scss
@@ -13,4 +13,20 @@ $component-name: form-fields-textarea;
     vertical-align: top;
     resize: vertical;
   }
+
+  &__error {
+    opacity: 0;
+    max-height: 0;
+    color: var(--error);
+    margin: unit(.5) 0 unit(.5) 0;
+    transition: opacity var(--animation-easing) var(--animation-duration-standard),
+    max-height var(--animation-easing) var(--animation-duration-standard);
+  }
+
+  &--has-error {
+    .#{$component-name}__error {
+      opacity: 1;
+      max-height: 50px;
+    }
+  }
 }
