--- a/styles/components/form/fields/_checkbox.scss
+++ b/styles/components/form/fields/_checkbox.scss
@@ -7,7 +7,8 @@ $border-space: 3px;
   cursor: pointer;
 
   &__input {
-    display: none;
+    opacity: 0;
+    position: absolute;
   }
 
   &__checkbox {
