--- a/styles/components/form/fields/_checkbox-group.scss
+++ b/styles/components/form/fields/_checkbox-group.scss
@@ -4,15 +4,17 @@ $component-name: form-field-checkbox-group;
   @include form-field;
   display: block;
 
-  &__option:last-child {
-    margin: 0;
+  &__option {
+    &:last-child {
+      margin: 0;
+    }
   }
 
   &__error {
     opacity: 0;
     max-height: 0;
     color: var(--error);
-    margin: unit(.5) 0 unit(.5) 0;
+    margin: unit(.5) 0;
     transition: opacity var(--animation-easing) var(--animation-duration-standard),
     max-height var(--animation-easing) var(--animation-duration-standard);
   }
