--- a/styles/components/form/fields/_toggle-button.scss
+++ b/styles/components/form/fields/_toggle-button.scss
@@ -22,7 +22,7 @@ $component-name: form-field-togglebutton;
     z-index: 0;
     font-weight: 500;
     text-align: center;
-    padding: 0.5rem;
+    padding: .5rem;
 
     &::before {
       position: absolute;
