--- a/styles/components/_node.scss
+++ b/styles/components/_node.scss
@@ -24,7 +24,7 @@
   font-size: var(--base-node-size);
   width: 1em;
   height: 1em;
-  filter: drop-shadow(0 4px 0 var(--drop-shadow-color));
+  filter: drop-shadow(0 .25rem 0 rgba(0, 0, 0, .25));
   display: inline-flex;
 
   &__node {
@@ -54,8 +54,7 @@
   &__node-outer-trim {
     fill: transparent;
     stroke: transparent;
-    stroke-width: 27px;
-    // transition: stroke var(--animation-easing) var(--animation-duration-slow);
+    stroke-width: 1.2rem;
 
   }
 
