--- a/styles/global/_default.scss
+++ b/styles/global/_default.scss
@@ -266,7 +266,7 @@ $headings: (
   'quicksand', base,
   (
     font-family: var(--heading-font-family),
-    font-size: 16px,
+    font-size: 1rem,
     line-height: $base-line-height,
     font-weight: $headings-font-weight
   )
@@ -288,7 +288,7 @@ $headings: (
   'main-title', base,
   (
     font-family: var(--heading-font-family),
-    font-size: 45px,
+    font-size: 3rem,
     line-height: 1.429,
     font-weight: 700,
     text-align: center,
@@ -299,7 +299,7 @@ $headings: (
   'title-1', base,
   (
     font-family: var(--heading-font-family),
-    font-size: 32px,
+    font-size: 2.5rem,
     line-height: 1.429,
     font-weight: 700,
     text-align: center,
@@ -313,7 +313,7 @@ $headings: (
 @include type-set(
   'title-2', base,
   (
-    font-size: 20px,
+    font-size: 1.2rem,
     line-height: $base-line-height,
     font-weight: 500,
   )
@@ -323,7 +323,7 @@ $headings: (
 @include type-set(
   'title-3', base,
   (
-    font-size: 17px,
+    font-size: 1.05rem,
     line-height: $base-line-height,
     font-weight: $headings-font-weight,
     text-align: center,
@@ -333,7 +333,7 @@ $headings: (
 @include type-set(
   'title-4', base,
   (
-    font-size: 16px,
+    font-size: 1rem,
     line-height: $base-line-height,
   )
 );
@@ -341,7 +341,7 @@ $headings: (
 @include type-set(
   'title-5', base,
   (
-    font-size: 12px,
+    font-size: .8rem,
     line-height: $base-line-height,
   )
 );
@@ -350,21 +350,21 @@ $headings: (
 @include type-set(
   'copy-large', base,
   (
-    font-size: 18px,
+    font-size: 1.1rem,
     line-height: $base-line-height
   )
 );
 @include type-set(
   'copy-standard', base,
   (
-    font-size: 16px,
+    font-size: 1rem,
     line-height: $base-line-height
   )
 );
 @include type-set(
   'copy-small', base,
   (
-    font-size: 12px,
+    font-size: .7rem,
     line-height: $base-line-height,
     font-weight: 100
   )
