--- a/styles/components/_inputs.scss
+++ b/styles/components/_inputs.scss
@@ -423,7 +423,7 @@
       position: relative;
       min-height: 100px;
       min-width: 100px;
-      margin-right: 1.5em;
+      margin-right: 1.5rem;
 
       .input__label {
         position: static;
