update icon size

--- a/styles/components/_icons.scss
+++ b/styles/components/_icons.scss
@@ -1,7 +1,7 @@
 // Icons
 // =============================================================================
 
-$icon-dimension-base: 35px !default;
+$icon-dimension-base: 2rem !default;
 
 $icon-small-width: $icon-dimension-base !default;
 $icon-small-height: $icon-dimension-base !default;
