--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -4,13 +4,8 @@
 @mixin reset-button {
   -webkit-appearance: none; //sass-lint:disable-line no-vendor-prefixes
   border: 0;
+  padding: 0;
   background: none;
-}
-
-@mixin default-button-type {
-  @include typography('title-2');
-  text-transform: uppercase;
-  color: palette('text');
 }
 
 @mixin button (
@@ -18,8 +13,13 @@
 ) {
   .#{$button-class} {
     @include reset-button;
-    @include default-button-type;
     @include vcjc; // vertical center, justify center
+
+    font-weight: 700;
+    font-size: .8rem;
+    letter-spacing: .15em;
+    text-transform: uppercase;
+    color: palette('text');
 
     display: inline-flex;
     font-family: var(--heading-font-family);
@@ -29,11 +29,13 @@
     width: auto;
     height: auto;
     min-width: 3rem;
-    min-height: 2rem;
+    min-height: 3.5rem;
 
     border-radius: 2rem;
-    box-shadow: 0 3px rgba(0, 0, 0, .25); //sass-lint:disable-line no-color-literals
+    box-shadow: 0 .15rem rgba(0, 0, 0, .25); //sass-lint:disable-line no-color-literals
     background-color: color('sea-green');
+
+    margin-bottom: .15rem;
 
     &:hover {
       text-decoration: none;
@@ -46,12 +48,7 @@
     &--small {
       min-width: inherit;
       min-height: inherit;
-      padding: 1.35rem 0;
-      font-size: 1rem;
-
-      > .button__content {
-        margin: 0 2rem;
-      }
+      font-size: 0.5rem;
     }
 
     &__content {
