--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -47,7 +47,7 @@
 
     &--small {
       min-width: inherit;
-      min-height: inherit;
+      min-height: 2.5rem;
       font-size: 0.5rem;
     }
 
