--- a/styles/components/_icons.scss
+++ b/styles/components/_icons.scss
@@ -116,6 +116,40 @@ $-icon-color-modifiers: (
     }
   }
 
+  &[name='add-a-protocol'] {
+    .cls-1 {
+      fill: color('#{$main-color}');
+    }
+
+    .cls-2 {
+      fill: color('platinum');
+    }
+
+    .cls-3 {
+      fill: color('#{$main-color}');
+    }
+
+    .cls-4 {
+      fill: color('cyber-grape');
+    }
+
+    .cls-5 {
+      fill: rgba(var(--color-navy-taupe---rgb), 0.5);
+    }
+
+    .cls-6 {
+      fill: var(--color-platinum--dark);
+    }
+
+    .cls-8 {
+      fill: var(--color-navy-taupe);
+    }
+
+    .cls-7 {
+      fill: color('slate-blue');
+    }
+  }
+
   &[name='add-a-screen'] {
     .cls-1 {
       fill: color('#{$main-color}');
@@ -139,6 +173,28 @@ $-icon-color-modifiers: (
 
     .cls-6 {
       fill: color('platinum');
+    }
+  }
+
+  &[name='pair-a-server'] {
+    .cls-8 {
+      fill: color('#{$main-color}');
+    }
+
+    .cls-2 {
+      fill: color('mustard');
+    }
+
+    .cls-3 {
+      fill: color('tomato');
+    }
+
+    .cls-4 {
+      fill: color('platinum');
+    }
+
+    .cls-5 {
+      fill: color('platinum--dark');
     }
   }
 
@@ -192,6 +248,38 @@ $-icon-color-modifiers: (
     .cls-5 {
       fill: color('#{$main-color}');
     }
+  }
+
+  &[name='protocol-card'] {
+
+    .cls-1 {
+      fill: color('platinum--dark');
+    }
+
+    .cls-2 {
+      fill: color('platinum');
+    }
+
+    .cls-2 {
+      fill: color('cyber-grape');
+    }
+
+    .cls-3 {
+      fill: var(--color-navy-taupe);
+    }
+
+    .cls-4 {
+      fill: rgba(var(--color-navy-taupe---rgb), 0.5);
+    }
+
+    .cls-5 {
+      fill: var(--color-platinum);
+    }
+
+    .cls-6 {
+      fill: var(--color-slate-blue);
+    }
+
   }
 
   &[name='warning'] {
