--- a/styles/components/_dialog.scss
+++ b/styles/components/_dialog.scss
@@ -1,14 +1,108 @@
 .dialog {
-  background: white;
-  display: flex;
-  flex-direction: column;
+  width: 750px;
+  background: var(--modal-main-panel);
+  color: var(--text-light);
+  box-shadow: 0 0 4px 0 var(--modal-window-box-shadow);
+  position: relative;
+  border-left: 15px solid palette('primary');
+  border-radius: 15px;
 
-  &__title {
-    background: grey;
-    padding: 20px;
+  &--info {
+    border-color: palette('info');
   }
 
-  &__content {
-    padding: 50px;
+  &--warning {
+    border-color: palette('warning');
+  }
+
+  &--error {
+    border-color: palette('error');
+  }
+
+  &__main {
+    display: flex;
+    max-height: 80vh;
+    margin: 25px 40px;
+
+    &-content {
+      order: 1;
+      flex: 2;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    &-title {
+      text-transform: uppercase;
+      font-weight: 700;
+      margin-bottom: 20px;
+    }
+
+    &-icon {
+      order: 1;
+      flex: 1;
+
+      .icon {
+        height: 170px;
+        width: 170px;
+        margin-right: 20px;
+      }
+    }
+  }
+
+  &__additional {
+
+    &-box {
+      height: 200px;
+      padding: 20px;
+      margin-top: 20px;
+      border: 1px solid var(--modal-overlay);
+      background: var(--modal-background);
+      user-select: initial;
+      overflow-y: auto;
+      overflow-x: hidden;
+      margin: 25px 40px;
+
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        font-weight: 700;
+        text-transform: uppercase;
+      }
+    }
+  }
+
+  &__footer {
+    margin: 25px 40px;
+    text-align: center;
+
+    .button {
+      &:last-child {
+        margin-left: 20px;
+      }
+    }
+  }
+
+  &__close {
+    background: transparent;
+    // background-image: url('../images/close.svg');
+    background-repeat: no-repeat;
+    background-size: 15px;
+    background-position: 0 50%;
+    padding-left: 25px;
+    text-transform: uppercase;
+    border: 0;
+    position: absolute;
+    right: 35px;
+    top: 35px;
+    color: palette('text');
+    cursor: pointer;
+
+    &:focus {
+      outline: none;
+    }
   }
 }
