--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -48,7 +48,7 @@
     &--small {
       min-width: inherit;
       min-height: 2.5rem;
-      font-size: 0.5rem;
+      font-size: .5rem;
     }
 
     &__content {
