--- a/styles/components/_icons.scss
+++ b/styles/components/_icons.scss
@@ -134,7 +134,7 @@ $-icon-color-modifiers: (
     }
 
     .cls-5 {
-      fill: rgba(var(--color-navy-taupe---rgb), 0.5);
+      fill: rgba(var(--color-navy-taupe---rgb), .5); //sass-lint:disable-line no-color-literals
     }
 
     .cls-6 {
@@ -186,8 +186,8 @@ $-icon-color-modifiers: (
     }
 
     .cls-3 {
-      fill: color('tomato');
-      clip-path:url(#clip-path);
+      fill: color('neon-coral');
+      clip-path: url('clip-path');
     }
 
     .cls-4 {
@@ -270,7 +270,7 @@ $-icon-color-modifiers: (
     }
 
     .cls-4 {
-      fill: rgba(var(--color-navy-taupe---rgb), 0.5);
+      fill: rgba(var(--color-navy-taupe---rgb), .5); //sass-lint:disable-line no-color-literals
     }
 
     .cls-5 {
