--- a/styles/components/_node.scss
+++ b/styles/components/_node.scss
@@ -24,6 +24,7 @@
   font-size: var(--base-node-size);
   width: 1em;
   height: 1em;
+  //sass-lint:disable no-color-literals
   filter: drop-shadow(0 .25rem 0 rgba(0, 0, 0, .25));
   display: inline-flex;
 
