--- a/styles/components/_icons.scss
+++ b/styles/components/_icons.scss
@@ -187,7 +187,7 @@ $-icon-color-modifiers: (
 
     .cls-3 {
       fill: color('neon-coral');
-      clip-path: url('clip-path');
+      clip-path: url('#clip-path');
     }
 
     .cls-4 {
