--- a/styles/global/_default.scss
+++ b/styles/global/_default.scss
@@ -63,6 +63,7 @@ $export-ui-classes: true !default;
 @include palette-set('modal-main-panel', color('cyber-grape'));
 @include palette-set('modal-background', color('navy-taupe'));
 @include palette-set('info', color('sea-green'));
+@include palette-set('notice', color('slate-blue'));
 @include palette-set('warning', color('mustard'));
 @include palette-set('error', color('neon-coral'));
 @include palette-set('headings', color('white'));
