--- a/styles/components/form/fields/_checkbox.scss
+++ b/styles/components/form/fields/_checkbox.scss
@@ -5,12 +5,13 @@ $border-space: 3px;
 .form-field-checkbox {
   display: inline-block;
   cursor: pointer;
+  position: relative;
 
   &__input {
     opacity: 0;
     position: absolute;
-    top: 0;
     left: 0;
+    top: 0;
   }
 
   &__checkbox {
