Add z-index values

--- a/styles/global/_default.scss
+++ b/styles/global/_default.scss
@@ -10,6 +10,7 @@
 @import 'core/typography';
 @import 'core/quicksand';
 @import 'core/normalize';
+@import 'core/z-index';
 
 $export-ui-classes: true !default;
 
