--- a/styles/components/_modal.scss
+++ b/styles/components/_modal.scss
@@ -5,7 +5,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: var(--z-modal);
+  z-index: var(--z-dialog);
 
   &__background {
     position: absolute;
