--- a/styles/global/core/_normalize.scss
+++ b/styles/global/core/_normalize.scss
@@ -61,7 +61,7 @@
   // Similarly, the top margin on `<p>`s get reset. However, we also reset the
   // bottom margin to use `rem` units instead of `em`.
   p {
-    margin-top: 0;
+    margin-top: 1rem;
     margin-bottom: 1rem;
   }
 
@@ -183,7 +183,7 @@
   label {
     // Allow labels to use `margin` for spacing.
     display: inline-block;
-    margin-bottom: .5rem;
+    margin: 0;
   }
 
   fieldset {
