Use alternative variable for ring background to avoid clashing with Architect

--- a/styles/global/_default.scss
+++ b/styles/global/_default.scss
@@ -71,7 +71,8 @@ $export-ui-classes: true !default;
 @include palette-set('headings', color('white'));
 @include palette-set('menu-headings', color('charcoal'));
 @include palette-set('divider', color('platinum--dark'));
-@include palette-set('ring', color('cyber-grape'));
+@include palette-set('ring--background', var(--background));
+@include palette-set('ring--accent', color('cyber-grape'));
 @include palette-set('graph-tooltip', color('charcoal'));
 @include palette-set('graph-data-1', color('sea-green'));
 @include palette-set('graph-data-2', color('slate-blue'));
