update edge colors

--- a/styles/global/_default.scss
+++ b/styles/global/_default.scss
@@ -111,8 +111,8 @@ $export-ui-classes: true !default;
 @include palette-set('edge-color-seq-5', color('paradise-pink'));
 @include palette-set('edge-color-seq-6', color('tomato'));
 @include palette-set('edge-color-seq-7', color('sea-serpent'));
-@include palette-set('edge-color-seq-8', color('barbie-pink'));
-@include palette-set('edge-color-seq-9', color('neon-coral'));
+@include palette-set('edge-color-seq-8', color('slate-blue'));
+@include palette-set('edge-color-seq-9', color('sea-green'));
 @include palette-set('edge-color-seq-10', color('cerulean-blue'));
 
 // Node Sequence
