--- a/styles/components/form/fields/_range.scss
+++ b/styles/components/form/fields/_range.scss
@@ -23,7 +23,7 @@ input {
       background: var(--primary);
       cursor: pointer;
       appearance: none;
-      margin-top: -.5rem;
+      margin-top: -0.5rem;
     }
   }
 }
