--- a/styles/components/_dialog.scss
+++ b/styles/components/_dialog.scss
@@ -2,13 +2,13 @@
   max-width: 50rem;
   background: var(--modal-main-panel);
   color: var(--text-light);
-  box-shadow: 0 0 .25rem 0 var(--modal-window-box-shadow);
+  box-shadow: 0 0 0.25rem 0 var(--modal-window-box-shadow);
   position: relative;
   border-color: var(--primary);
   border-style: solid;
   border-width: 0;
-  border-left-width: .5rem;
-  border-radius: .75rem;
+  border-left-width: 0.5rem;
+  border-radius: 0.75rem;
   max-height: 80vh;
   overflow-x: hidden;
   overflow-y: auto;
