--- a/styles/components/_icons.scss
+++ b/styles/components/_icons.scss
@@ -35,11 +35,11 @@ $-icon-color-modifiers: (
     }
 
     .cls-2 {
-      fill: color('platinum--dark', .3);
+      fill: color('platinum--dark', 0.3);
     }
 
     .cls-3 {
-      fill: color('platinum--dark', .6);
+      fill: color('platinum--dark', 0.6);
     }
 
     .cls-4 {
@@ -134,7 +134,7 @@ $-icon-color-modifiers: (
     }
 
     .cls-5 {
-      fill: rgba(var(--color-navy-taupe---rgb), .5); //sass-lint:disable-line no-color-literals
+      fill: rgba(var(--color-navy-taupe---rgb), 0.5); //sass-lint:disable-line no-color-literals
     }
 
     .cls-6 {
@@ -270,7 +270,7 @@ $-icon-color-modifiers: (
     }
 
     .cls-4 {
-      fill: rgba(var(--color-navy-taupe---rgb), .5); //sass-lint:disable-line no-color-literals
+      fill: rgba(var(--color-navy-taupe---rgb), 0.5); //sass-lint:disable-line no-color-literals
     }
 
     .cls-5 {
