--- a/styles/components/_narrative-panel.scss
+++ b/styles/components/_narrative-panel.scss
@@ -10,7 +10,7 @@ $module-name: 'narrative-panel';
     @include typography('title-4');
     @include transition-properties((background-color, color), ease, var(--animation-duration-standard));
     text-transform: uppercase;  // Should this be part of typography?
-    letter-spacing: spacing(.15);  // Should this be part of typography?
+    letter-spacing: spacing(0.15);  // Should this be part of typography?
     border: 0;
     outline: none;
     padding: spacing(1.5) spacing(1.25);
