--- a/styles/components/form/fields/_text.scss
+++ b/styles/components/form/fields/_text.scss
@@ -4,7 +4,7 @@ $module-name: form-field-text;
   @include form-field;
   display: block;
   position: relative;
-  padding: .5em 1em;
+  padding: 0.5em 1em;
 
   &__input {
     font-family: var(--body-font-family);
@@ -14,8 +14,8 @@ $module-name: form-field-text;
     width: 100%;
     color: var(--input-text);
     border: 0;
-    padding: 1em 0 .5em;
-    border-bottom-width: unit(.25);
+    padding: 1em 0 0.5em;
+    border-bottom-width: unit(0.25);
     border-bottom-style: solid;
     border-bottom-color: transparent;
     transition: border-bottom-color var(--animation-easing) var(--animation-duration-standard);
@@ -30,7 +30,7 @@ $module-name: form-field-text;
     opacity: 0;
     max-height: 0;
     color: var(--error);
-    margin: unit(.5) 0;
+    margin: unit(0.5) 0;
     transition: opacity var(--animation-easing) var(--animation-duration-standard),
     max-height var(--animation-easing) var(--animation-duration-standard);
   }
