--- a/styles/components/form/fields/_textarea.scss
+++ b/styles/components/form/fields/_textarea.scss
@@ -6,7 +6,7 @@ $component-name: form-fields-textarea;
 
   &__input {
     @include typography('copy-large');
-    border: unit(.2) solid var(--architect-panel-background);
+    border: unit(0.2) solid var(--architect-panel-background);
     padding: unit(1);
     min-height: unit(8);
     width: 100%;
@@ -18,7 +18,7 @@ $component-name: form-fields-textarea;
     opacity: 0;
     max-height: 0;
     color: var(--error);
-    margin: unit(.5) 0;
+    margin: unit(0.5) 0;
     transition: opacity var(--animation-easing) var(--animation-duration-standard),
     max-height var(--animation-easing) var(--animation-duration-standard);
   }
