--- a/styles/components/form/fields/_toggle-button.scss
+++ b/styles/components/form/fields/_toggle-button.scss
@@ -1,6 +1,6 @@
 $size: 7rem;
-$border: .2rem;
-$border-space: .3rem;
+$border: 0.2rem;
+$border-space: 0.3rem;
 
 $component-name: form-field-togglebutton;
 
@@ -22,7 +22,7 @@ $component-name: form-field-togglebutton;
     z-index: 0;
     font-weight: 500;
     text-align: center;
-    padding: .5rem;
+    padding: 0.5rem;
 
     &::before {
       position: absolute;
