--- a/styles/global/core/_animation.scss
+++ b/styles/global/core/_animation.scss
@@ -1,17 +1,17 @@
 
 $animation-default-scale-factor: 1;
 $animation-default-scale-factor-ms: 1000;
-$animation-easing-ios: cubic-bezier(.23, 1, .32, 1);
-$animation-easing-android: cubic-bezier(.4, 0, .2, 1);
+$animation-easing-ios: cubic-bezier(0.23, 1, 0.32, 1);
+$animation-easing-android: cubic-bezier(0.4, 0, 0.2, 1);
 
 :root {
   --animation-scale-factor: #{$animation-default-scale-factor};
-  --animation-duration-fast: #{$animation-default-scale-factor * .25s};
-  --animation-duration-fast-ms: #{$animation-default-scale-factor-ms * .25};
-  --animation-duration-standard: #{$animation-default-scale-factor * .35s};
-  --animation-duration-standard-ms: #{$animation-default-scale-factor-ms * .35};
-  --animation-duration-slow: #{$animation-default-scale-factor * .55s};
-  --animation-duration-slow-ms: #{$animation-default-scale-factor-ms * .5};
+  --animation-duration-fast: #{$animation-default-scale-factor * 0.25s};
+  --animation-duration-fast-ms: #{$animation-default-scale-factor-ms * 0.25};
+  --animation-duration-standard: #{$animation-default-scale-factor * 0.35s};
+  --animation-duration-standard-ms: #{$animation-default-scale-factor-ms * 0.35};
+  --animation-duration-slow: #{$animation-default-scale-factor * 0.55s};
+  --animation-duration-slow-ms: #{$animation-default-scale-factor-ms * 0.5};
   --animation-easing: #{$animation-easing-android};
   --animation-easing-js: [0.4, 0, 0.2, 1];
 }
@@ -37,12 +37,12 @@ $animation-easing-android: cubic-bezier(.4, 0, .2, 1);
 
   50% {
     transform: scale(1.1);
-    opacity: .4;
+    opacity: 0.4;
   }
 
   75% {
-    transform: scale(.9);
-    opacity: .7;
+    transform: scale(0.9);
+    opacity: 0.7;
   }
 
   100% {
