--- a/styles/global/core/_normalize.scss
+++ b/styles/global/core/_normalize.scss
@@ -53,7 +53,7 @@
   h5,
   h6 {
     margin-top: 0;
-    // margin-bottom: .5rem;
+    // margin-bottom: 0.5rem;
   }
 
   // Reset margins on paragraphs
@@ -84,7 +84,7 @@
   }
 
   dd {
-    margin-bottom: .5rem;
+    margin-bottom: 0.5rem;
     margin-left: 0; // Undo browser default
   }
 
