--- a/styles/global/core/_spacing.scss
+++ b/styles/global/core/_spacing.scss
@@ -1,8 +1,8 @@
 // TODO: Are these based on anything or are they legacy?
 $spacer: 1.2rem !default;
 $spacer-0: 0;
-$spacer-1: ($spacer * .25);
-$spacer-2: ($spacer * .5);
+$spacer-1: ($spacer * 0.25);
+$spacer-2: ($spacer * 0.5);
 $spacer-3: $spacer;
 $spacer-4: ($spacer * 1.5);
 $spacer-5: ($spacer * 3);
@@ -14,8 +14,8 @@ $headings-margin-bottom: ($spacer / 2) !default;
 // TODO: Based on spacer-x etc, are these meaningful intervals?
 $spacing-intervals: (
   'none': 0,    // 0
-  'tiny': .25,  // ~5px
-  'small': .5,  // ~10px
+  'tiny': 0.25,  // ~5px
+  'small': 0.5,  // ~10px
   'medium': 1,  // ~20px
   'large': 1.5, // ~30px
   'huge': 3     // ~60px
