--- a/styles/global/core/_animation.scss
+++ b/styles/global/core/_animation.scss
@@ -13,7 +13,10 @@ $animation-easing-android: cubic-bezier(0.4, 0, 0.2, 1);
   --animation-duration-slow: #{$animation-default-scale-factor * 0.55s};
   --animation-duration-slow-ms: #{$animation-default-scale-factor-ms * 0.5};
   --animation-easing: #{$animation-easing-android};
-  --animation-easing-js: [0.4, 0, 0.2, 1];
+
+  // Values provided to JS must be valid JSON
+  --animation-easing-json: [0.4, 0, 0.2, 1];
+  --animation-easing-js: var(--animation-easing-json);
 }
 
 // Preset animations **********************************************************/
