Add button disabled state style
Taken from Architect

--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -43,6 +43,12 @@
       opacity: 0.8;
     }
 
+    &:disabled,
+    &[disabled] {
+      opacity: 0.5;
+      cursor: default;
+    }
+
     @include color-modifiers($include-hover: true);
 
     &--small {
