--- a/styles/components/_modal.scss
+++ b/styles/components/_modal.scss
@@ -14,6 +14,10 @@
     width: 100%;
     height: 100%;
     background-color: var(--modal-overlay);
+    @supports (backdrop-filter: blur(.75rem)) {
+      background: var(--modal-overlay); //sass-lint:disable-line no-color-literals
+      backdrop-filter: blur(.75rem);
+    }
   }
 
   &__content {
