--- a/styles/components/_modal.scss
+++ b/styles/components/_modal.scss
@@ -14,9 +14,9 @@
     width: 100%;
     height: 100%;
     background-color: var(--modal-overlay);
-    @supports (backdrop-filter: blur(.75rem)) {
-      background: var(--modal-overlay); //sass-lint:disable-line no-color-literals
-      backdrop-filter: blur(.75rem);
+    @supports (backdrop-filter: blur(0.75rem)) {
+      background: var(--modal-overlay);
+      backdrop-filter: blur(0.75rem);
     }
   }
 
