--- a/styles/components/_node.scss
+++ b/styles/components/_node.scss
@@ -8,7 +8,7 @@
   }
 
   50% {
-    transform: scale(1.1);
+    transform: scale(1);
   }
 
   100% {
@@ -17,21 +17,18 @@
 }
 
 .node {
-  cursor: pointer;
+  display: inline-block;
   position: relative;
-  overflow: visible;
-  margin: 0;
-  font-size: var(--base-node-size);
   width: 1em;
-  height: 1em;
-  //sass-lint:disable no-color-literals
-  filter: drop-shadow(0 0.25rem 0 rgba(0, 0, 0, 0.25));
-  display: inline-flex;
+  font-size: var(--base-node-size);
+  padding-bottom: 100%;
+  vertical-align: middle;
 
   &__node {
-    width: 100%;
-    height: 100%;
+    display: inline-block;
     position: absolute;
+    top: 0;
+    left: 0;
     overflow: visible;
   }
 
@@ -48,14 +45,12 @@
   &__node-trim {
     fill: transparent;
     stroke: transparent;
-    stroke-width: 3px;
+    stroke-width: 0.75rem;
     transition: stroke var(--animation-duration-standard) ease-in-out;
   }
 
   &__node-outer-trim {
     fill: transparent;
-    stroke: transparent;
-    stroke-width: 1.2rem;
 
   }
 
@@ -121,7 +116,7 @@
     }
 
     .node__node-outer-trim {
-      stroke: var(--node-outer-trim-stroke);
+      fill: var(--node-outer-trim-stroke);
       animation: bounce var(--animation-duration-standard) ease-in-out;
     }
   }
@@ -132,7 +127,8 @@
     }
 
     .node__node-outer-trim {
-      stroke: var(--node-outer-trim-stroke);
+      fill: var(--node-outer-trim-stroke);
+      transform-origin: 250px 250px;
       animation: linking var(--animation-duration-slow) ease-in-out infinite;
     }
 
