remove 100% bottom padding from node

--- a/styles/components/_node.scss
+++ b/styles/components/_node.scss
@@ -20,8 +20,8 @@
   display: inline-block;
   position: relative;
   width: 1em;
+  height: 1em;
   font-size: var(--base-node-size);
-  padding-bottom: 100%;
   vertical-align: middle;
 
   &__node {
